--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,14 +2,14 @@ name: Generate Snake Animation
 
 on:
   schedule:
-    - cron: "0 0 * * *"
-  workflow_dispatch:
+    - cron: "0 0 * * *"  # Runs daily
+  workflow_dispatch:     # Allow manual trigger
 
 jobs:
   generate:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout GitHub repository
+      - name: Checkout repository
         uses: actions/checkout@v3
 
       - name: Generate Snake Animation
@@ -20,7 +20,7 @@ jobs:
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
 
-      - name: Push to the output branch
+      - name: Push snake animation to the output branch
         uses: crazy-max/ghaction-github-pages@v4
         with:
           target_branch: output
